--- a/ROCK PAPER SCISSORS.html
+++ b/ROCK PAPER SCISSORS.html
@@ -28,11 +28,12 @@
                 }else if(playerSelection === "paper" && computerSelection === "scissors"){
                   return ("You Lose!");
                 }
- }             let playerSelection = prompt("Please choose either rock, scissors or paper!", "paper");
-                playerSelection = playerSelection.toLowerCase();
+ }             
                 var a=0;
                 var b=0;
                 for(let i=0; i<5; i++){
+                let playerSelection = prompt("Please choose either rock, scissors or paper!");
+                playerSelection = playerSelection.toLowerCase();
                 var computerSelection = computerPlay();
                 console.log(playRound(playerSelection, computerSelection));
                 if(playRound(playerSelection, computerSelection) === "You Win!"){
