Update ROCK PAPER SCISSORS.html

--- a/ROCK PAPER SCISSORS.html
+++ b/ROCK PAPER SCISSORS.html
@@ -5,6 +5,10 @@
         <meta charset = "UTF-8"/>
     </head>
     <body>
+      <button id = "btn">Rock</button>
+      <button id = "btn">Paper</button>
+      <button id = "btn">Scissors</button>
+
         <script>
   function game(){
     //Computer plays randomly
@@ -46,6 +50,10 @@
   }
 
   game();
+
+
+
+
         </script>
     </body>
 
